--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <style>
+body {
+    background-color: goldenrod;
+    font-family: "JF16", sans-serif;
+}
+h1 {
+
+    background-color: salmon;
+    border: 1px;
+    border-radius: 5px;
+}
+@font-face {
+    font-family: "JF16";
+    src: url("JF-Dot-jiskan16.ttf") format("truetype");
+}
+@font-face {
+    font-family: "JF24";
+    src: url("JF-Dot-jiskan24.ttf") format("truetype");
+}
+    </style>
     <title>Document</title>
 </head>
 <body>
