--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ body {
     border-left: 5px red solid;
     font-family: "JF16", sans-serif;
     color: red;
+    font-size: 30px;
 }
 .syubetu {
     padding: 0px 5px;
@@ -22,6 +23,7 @@ body {
     border-left: 5px rgb(0, 123, 255) solid;
     font-family: "JF16", sans-serif;
     color: orangered;
+    font-size: 25px;
 }
 @font-face {
     font-family: "JF16";
